# voodooboard

./: .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  adc.c  adc.h  app_config.h  externs.h  globals.c  hardware_config.h  i2c.c  i2c.h  includes.h  main.c  modbus.c  modbus.h  modbus_config.h  serial.c  serial.h  spi_flash.c  spi_flash.h  stm32f103md.ld  stm32f103md2.ld  stm32f10x_conf.h  stm32f10x_it.c  stm32f10x_it.h  stm32f10x_vector.c  usage.sh
Libraries/CMSIS/Device/ST/STM32F10x/Include/: stm32f10x.h
Libraries/STM32F10xFWLib/inc/: stm32f10x_adc.h  stm32f10x_map.h  stm32f10x_nvic.h  stm32f10x_type.h
Libraries/STM32F10x_StdPeriph_Driver/inc/: misc.h
Libraries/STM32F10x_StdPeriph_Driver/src/: misc.c  stm32f10x_dma.c  stm32f10x_rcc.c  stm32f10x_tim.c  stm32f10x_usart.c
schematics/: voodoo_dido.brd  voodoo_dido.sch
