cmake_minimum_required(VERSION 3.7)

message(STATUS "CMAKE_BUILD_TYPE = " ${CMAKE_BUILD_TYPE})
set(CMAKE_CXX_STANDARD 11)
message(STATUS "Starting build")
message(STATUS "USERNAME: " $ENV{USER})
set(CMAKE_VERBOSE_MAKEFILE ON)
project(voodooboard)
set(PROJECT_NAME voodooboard)

set(FreeRTOSSources
        ${PROJECT_SOURCE_DIR}/../FreeRTOS/Source/portable/GCC/ARM_CM3/port.c
        ${PROJECT_SOURCE_DIR}/../FreeRTOS/Source/queue.c
        ${PROJECT_SOURCE_DIR}/../FreeRTOS/Source/list.c
        ${PROJECT_SOURCE_DIR}/../FreeRTOS/Source/timers.c
        ${PROJECT_SOURCE_DIR}/../FreeRTOS/Source/tasks.c
        ${PROJECT_SOURCE_DIR}/../FreeRTOS/Source/portable/MemMang/heap_4.c
        )

set(PeripheralSources
        ${PROJECT_SOURCE_DIR}/../Libraries/STM32F10x_StdPeriph_Driver/src/misc.c
        ${PROJECT_SOURCE_DIR}/../Libraries/STM32F10x_StdPeriph_Driver/src/stm32f10x_rcc.c
        ${PROJECT_SOURCE_DIR}/../Libraries/STM32F10x_StdPeriph_Driver/src/stm32f10x_tim.c
        ${PROJECT_SOURCE_DIR}/../Libraries/STM32F10x_StdPeriph_Driver/src/stm32f10x_usart.c
        ${PROJECT_SOURCE_DIR}/../Libraries/STM32F10x_StdPeriph_Driver/src/stm32f10x_dma.c
        ${PROJECT_SOURCE_DIR}/../Libraries/CMSIS/Device/ST/STM32F10x/Source/Templates/system_stm32f10x.c
        )

set(Sources
        main.c
        modbus.c
        adc.c
        globals.c
        i2c.c
        serial.c
        spi_flash.c
        stm32f10x_it.c
        stm32f10x_vector.c
        ${FreeRTOSSources}
        ${PeripheralSources}
        )
add_executable(${PROJECT_NAME} ${Sources})

set(CROSS_PATH /home/$ENV{USER}/x-tools/arm-unknown-eabi/bin)
set(CMAKE_CXX_COMPILER ${CROSS_PATH}/arm-unknown-eabi-g++)
set(CMAKE_C_COMPILER ${CROSS_PATH}/arm-unknown-eabi-gcc)
set(CMAKE_OBJCOPY ${CROSS_PATH}/arm-unknown-eabi-objcopy)
#set(CMAKE_C_LINK_EXECUTABLE ${CROSS_PATH}/arm-unknown-eabi-ld)

set(LINKER_SCRIPT stm32f103md2.ld)
#set_target_properties(${PROJECT_NAME} PROPERTIES LINK_DEPENDS ${LINKER_SCRIPT})
set(CMAKE_EXE_LINKER_FLAGS "-T ${PROJECT_SOURCE_DIR}/${LINKER_SCRIPT}")
set(CMAKE_C_FLAGS "-mcpu=cortex-m3 -mthumb -mno-thumb-interwork -mfpu=vfp -msoft-float -mfix-cortex-m3-ldrd -nostdlib -Wl,-Map,output.map")

target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR})
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/../FreeRTOS/Source/include)
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/../FreeRTOS/Source/portable/GCC/ARM_CM3)
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/../Libraries/STM32F10x_StdPeriph_Driver/inc)
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/../Libraries/CMSIS/Device/ST/STM32F10x/Include)
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/../Libraries/CMSIS/Include)

add_definitions(-DSTM32F10X_MD)
add_definitions(-DDEBUG)

add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
        COMMAND ${CMAKE_OBJCOPY} -O ihex ${PROJECT_NAME} ${PROJECT_NAME}.hex
        COMMAND ${CMAKE_OBJCOPY} -O binary ${PROJECT_NAME} ${PROJECT_NAME}.bin
        )